[project]
name = "aoc2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "itrx>=0.2.1",
    "ruff>=0.14.7",
    "xenoform>=0.1.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ARG", "B", "C", "E", "F", "I", "N", "PERF", "PTH", "RET", "RUF", "SIM", "UP", "W"]
ignore = ["E501"]
